<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    >


    <TextView
        android:id="@+id/qtagfashion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textColor="#1F728D"
        android:textSize="17sp"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/q4" />

    <TextView
        android:id="@+id/aq8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qtag"
        android:layout_marginTop="82dp"
        android:textColor="#1F728D"
        android:textSize="17sp"
        android:text="@string/aq8"
        android:layout_centerHorizontal="true" />


    <Spinner
        android:id="@+id/fashioncategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:spinnerMode="dropdown"
        android:drawSelectorOnTop="true"
        android:background="@drawable/border_style"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fashioncategory"
        android:layout_marginTop="6dp"
        android:text="@string/buttonname"
        android:onClick="Qcolor"
        android:textColor="#1f728d"
        android:background="@drawable/border_style"

        />






</RelativeLayout>