<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <TextView
            android:id="@+id/qtag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:textColor="#1f728d"
            android:textSize="17sp"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/q5" />

        <TextView
            android:id="@+id/aq1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qtag"
            android:layout_marginTop="30dp"
            android:textColor="#1f728d"
            android:textSize="17sp"
            android:text="@string/spq5"
            android:layout_centerHorizontal="true" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarpassword"
            android:layout_below="@+id/qtag"
            android:layout_marginTop="95dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            >
            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/passwordfield"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:textColor="#fff"
                android:textColorHint="#000"
                android:layout_above="@id/email"
                android:gravity="center_horizontal"
                android:background="@drawable/textfield_borders"
                android:ems="10"
                android:inputType="textPassword" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/mark"
                android:layout_marginTop="45dp"
                android:layout_marginLeft="6dp"
                android:id="@+id/tip5"
                android:onClick="Hintspassword"


                />


        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarpassword2"
            android:layout_below="@+id/toolbarpassword"
            android:layout_marginTop="-15dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            >
            <EditText
                android:id="@+id/cpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cpassword"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="3dp"
                android:textColor="#fff"
                android:textColorHint="#000"
                android:gravity="center_horizontal"
                android:background="@drawable/textfield_borders"
                android:ems="10"
                android:inputType="textPassword" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/mark"
                android:layout_marginTop="45dp"
                android:layout_marginLeft="6dp"
                android:id="@+id/tip6"
                android:onClick="Hintspassword"


                />


        </LinearLayout>

        <Button
            android:id="@+id/loginsup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/toolbarpassword2"
            android:layout_marginTop="16dp"
            android:text="@string/buttonname"
            android:background="@drawable/border_style"
            android:textColor="#1f728d"
            android:onClick="logging"
            />
    </RelativeLayout>

</ScrollView>
